### Changed - レイアウト調整

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,10 +207,10 @@ body {
 .card .material-datatables {
   margin-top: 1rem; }
 
-.form-control {
+.input-group-text {
   font-size: inherit; }
 
-.input-group-text {
+.bmd-form-group .form-control, .bmd-form-group input::placeholder {
   font-size: inherit; }
 
 .scheduler {
