### Added - オファー管理を追加

--- a/views/addOns/index.ejs
+++ b/views/addOns/index.ejs
@@ -59,8 +59,8 @@ PO-01
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     <td name="name.ja">$name.ja$</td>
-                                    <td name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value"
-                                        style="text-align:right;">
+                                    <td
+                                        name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value">
                                         $priceSpecification.price$ $priceSpecification.priceCurrency$ /
                                         $referenceQuantity.value$
                                     </td>
