--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -67,34 +67,6 @@
             </div>
         </li>
 
-        <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#services">
-                <i class="material-icons">local_drink</i>
-                <p> プロダクト<span class="badge badge-secondary ml-2">Preview</span>
-                    <b class="caret"></b>
-                </p>
-            </a>
-            <div class="collapse" id="services">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/services/membershipProgram">
-                            <span class="sidebar-mini"><i class="icon far fa-calendar-alt"></i></span>
-                            <span class="sidebar-normal">会員プログラム</span>
-                        </a>
-                    </li>
-
-                    <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
-                        <a class="nav-link" href="/products">
-                            <span class="sidebar-mini"><i class="material-icons">local_drink</i></span>
-                            <span class="sidebar-normal">その他</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </li>
-        <% } %>
-
         <!-- <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
             <a class="nav-link" href="/accountTitles">
                 <i class="icon fa fa-table"></i>
@@ -129,10 +101,45 @@
                             <span class="sidebar-normal">アドオン <span class="badge badge-secondary">Preview</span></span>
                         </a>
                     </li>
+                    <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/offers">
+                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
+                            <span class="sidebar-normal">オファー <span class="badge badge-secondary">Preview</span></span>
+                        </a>
+                    </li>
                     <% } %>
                 </ul>
             </div>
         </li>
+
+        <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#services">
+                <i class="material-icons">local_drink</i>
+                <p> プロダクト<span class="badge badge-secondary ml-2">Preview</span>
+                    <b class="caret"></b>
+                </p>
+            </a>
+            <div class="collapse" id="services">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/services/membershipProgram">
+                            <span class="sidebar-mini"><i class="icon far fa-calendar-alt"></i></span>
+                            <span class="sidebar-normal">会員プログラム</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
+                        <a class="nav-link" href="/products">
+                            <span class="sidebar-mini"><i class="material-icons">local_drink</i></span>
+                            <span class="sidebar-normal">その他</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <% } %>
+
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#categoryCodes">
                 <i class="material-icons">category</i>
