--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -132,7 +132,7 @@
                     <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
                         <a class="nav-link" href="/products">
                             <span class="sidebar-mini"><i class="material-icons">local_drink</i></span>
-                            <span class="sidebar-normal">その他</span>
+                            <span class="sidebar-normal">アドオン</span>
                         </a>
                     </li>
                 </ul>
