--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -37,6 +37,7 @@ Aa-6
                                     <select class="form-control" name="itemOffered[typeOf]">
                                         <option value="">---</option>
                                         <option value="Service">会員プログラム</option>
+                                        <option value="Product">アドオン</option>
                                     </select>
                                 </div>
 
@@ -122,7 +123,6 @@ Aa-6
                                     <th>カテゴリー</th>
                                     <th>名称</th>
                                     <th>発生金額</th>
-                                    <th>適用条件</th>
                                     <th>有効性</th>
                                     <th>追加特性</th>
                                 </tr>
@@ -134,7 +134,7 @@ Aa-6
                                         <a target="_blank" href="/offers/$id$/update">
                                             $identifier$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                        </a><br>
+                                        </a>
                                     </td>
                                     <td name="availability">
                                         <span class="text-muted">$availability$</span>
@@ -143,11 +143,11 @@ Aa-6
                                     <td name="categoryName">$categoryName$</td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td
-                                        name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value">
+                                        name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value__priceSpecification.referenceQuantity.unitCode">
                                         $priceSpecification.price$ $priceSpecification.priceCurrency$ /
-                                        $referenceQuantity.value$
+                                        $priceSpecification.referenceQuantity.value$
+                                        $priceSpecification.referenceQuantity.unitCode$
                                     </td>
-                                    <td name="eligibleConditions">$eligibleConditions$</td>
                                     <td name="validFrom|parseDateTime__validThrough|parseDateTime__validRateLimitStr">
                                         $validFrom$ ~ $validThrough$<br>
                                         $validRateLimitStr$
