--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -107,6 +107,13 @@
                             <span class="sidebar-normal">オファー <span class="badge badge-secondary">Preview</span></span>
                         </a>
                     </li>
+                    <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/offerCatalogs">
+                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
+                            <span class="sidebar-normal">オファーカタログ <span
+                                    class="badge badge-secondary">Preview</span></span>
+                        </a>
+                    </li>
                     <% } %>
                 </ul>
             </div>
