### Added - オファーカタログ管理を追加

--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -35,8 +35,8 @@
                 </label>
                 <select class="form-control" name="itemOffered[typeOf]">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="Service"
-                        <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'Service') { %>
+                    <option value="MembershipService"
+                        <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'MembershipService') { %>
                         selected<% } %>>会員プログラム</option>
                     <option value="Product"
                         <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'Product') { %>
