--- a/views/offerCatalogs/form.ejs
+++ b/views/offerCatalogs/form.ejs
@@ -5,23 +5,47 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="form-group bmd-form-group">
-            <% if (isNew) { %>
-            <label for="identifier" class="bmd-label-static">
-                コード<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
-                value="<%= forms.identifier %>">
-            <span class="bmd-help">半角64文字以内でご入力ください</span>
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors.identifier) { %>
-                <%- errors.identifier.msg %>
+        <div class="form-row">
+            <div class="form-group bmd-form-group col-md-3">
+                <label for="identifier" class="bmd-label-static">
+                    コード<span class="text-danger">＊</span>
+                </label>
+                <% if (isNew) { %>
+                <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                    value="<%= forms.identifier %>">
+                <% } else { %>
+                <input type="text" class="form-control" disabled placeholder="" maxlength=64
+                    value="<%= forms.identifier %>">
+                <input type="hidden" name="id" value="<%= forms.id %>">
+                <input type="hidden" name="identifier" value="<%= forms.identifier %>">
                 <% } %>
-            </span>
-            <% } else { %>
-            <input type="hidden" name="id" value="<%= forms.id %>">
-            <input type="hidden" name="identifier" value="<%= forms.identifier %>">
-            <% } %>
+                <span class="bmd-help">半角64文字以内でご入力ください</span>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors.identifier) { %>
+                    <%- errors.identifier.msg %>
+                    <% } %>
+                </span>
+            </div>
+
+            <div class="form-group bmd-form-group col-md-3">
+                <label for="itemOffered[typeOf]" class="bmd-label-static">
+                    アイテム<span class="text-danger">＊</span>
+                </label>
+                <select class="form-control" name="itemOffered[typeOf]">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="MembershipService"
+                        <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'MembershipService') { %>
+                        selected<% } %>>会員プログラム</option>
+                    <option value="Product"
+                        <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'Product') { %>
+                        selected<% } %>>アドオン</option>
+                </select>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['itemOffered[typeOf]']) { %>
+                    <%- errors['itemOffered[typeOf'].msg %>
+                    <% } %>
+                </span>
+            </div>
         </div>
 
         <div class="form-group bmd-form-group">
@@ -53,13 +77,13 @@
 
         <div class="form-group bmd-form-group">
             <label for="ticketTypes" class="bmd-label-static">
-                対象券種名<span class="text-danger">＊</span>
+                オファーリスト<span class="text-danger">＊</span>
             </label>
         </div>
 
         <div class="form-group bmd-form-group">
             <span for="price" class="bmd-label-static">
-                券種売上金額
+                オファー売上金額
             </span>
             <div class="row">
                 <div class="col-md-6">
