--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -31,7 +31,18 @@ Aa-8
                             <%- include('../common/master/_hidden') %>
 
                             <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="itemOffered[typeOf][$eq]" class="bmd-label-static">
+                                        アイテム
+                                    </label>
+                                    <select class="form-control" name="itemOffered[typeOf][$eq]">
+                                        <option value="">---</option>
+                                        <option value="MembershipService">会員プログラム</option>
+                                        <option value="Product">アドオン</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="identifier" class="bmd-label-static">
                                         コード
                                     </label>
@@ -39,7 +50,7 @@ Aa-8
                                         placeholder="" maxlength=64>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="name" class="bmd-label-static">
                                         名称
                                     </label>
@@ -62,9 +73,10 @@ Aa-8
                             <thead class="text-primary">
                                 <tr>
                                     <th>コード</th>
+                                    <th>アイテム</th>
                                     <th>名称</th>
                                     <th>券種</th>
-                                    <th>興行区分</th>
+                                    <th>サービス区分</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -76,6 +88,7 @@ Aa-8
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
+                                    <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
