--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -36,7 +36,7 @@ Aa-6
                                     </label>
                                     <select class="form-control" name="itemOffered[typeOf]">
                                         <option value="">---</option>
-                                        <option value="Service">会員プログラム</option>
+                                        <option value="MembershipService">会員プログラム</option>
                                         <option value="Product">アドオン</option>
                                     </select>
                                 </div>
@@ -123,7 +123,9 @@ Aa-6
                                     <th>カテゴリー</th>
                                     <th>名称</th>
                                     <th>発生金額</th>
+                                    <th>売上金額</th>
                                     <th>有効性</th>
+                                    <th>カタログ</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -148,10 +150,17 @@ Aa-6
                                         $priceSpecification.referenceQuantity.value$
                                         $priceSpecification.referenceQuantity.unitCode$
                                     </td>
+                                    <td name="priceSpecification.accounting.accountsReceivable">
+                                        $priceSpecification.accounting.accountsReceivable$</td>
                                     <td name="validFrom|parseDateTime__validThrough|parseDateTime__validRateLimitStr">
                                         $validFrom$ ~ $validThrough$<br>
                                         $validRateLimitStr$
                                     </td>
+                                    </td>
+                                    <td name="id__showCatalogs">
+                                        <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
                                     </td>
                                     <td name="id__additionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
@@ -190,6 +199,25 @@ Aa-6
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="offerCatalogs" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">所属オファーカタログ</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn bg-dark-gray text-white" data-dismiss="modal">閉じる</button>
             </div>
         </div>
     </div>
