### Changed - レイアウト調整

--- a/views/offerCatalogs/form.ejs
+++ b/views/offerCatalogs/form.ejs
@@ -35,7 +35,7 @@
                     <option value="" disabled selected>選択してください</option>
                     <option value="MembershipService"
                         <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'MembershipService') { %>
-                        selected<% } %>>会員プログラム</option>
+                        selected<% } %>>会員サービス</option>
                     <option value="Product"
                         <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === 'Product') { %>
                         selected<% } %>>アドオン</option>
