--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -36,7 +36,7 @@ Aa-6
                                     </label>
                                     <select class="form-control" name="itemOffered[typeOf]">
                                         <option value="">---</option>
-                                        <option value="MembershipService">会員プログラム</option>
+                                        <option value="MembershipService">会員サービス</option>
                                         <option value="Product">アドオン</option>
                                     </select>
                                 </div>
