--- a/views/services/membershipService/update.ejs
+++ b/views/services/membershipService/update.ejs
@@ -1,11 +1,11 @@
 <%- contentFor('title') %>
-会員プログラム編集
+会員サービス編集
 <%- contentFor('displayId') %>
-PR-01
+MS-01
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/services/membershipProgram/form.js"></script>
+<script src="/js/master/services/membershipService/form.js"></script>
 
 <%- contentFor('body') %>
 <div class="form-container">
