--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -129,10 +129,10 @@
             </a>
             <div class="collapse" id="services">
                 <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/services/membershipProgram">
-                            <span class="sidebar-mini"><i class="icon far fa-calendar-alt"></i></span>
-                            <span class="sidebar-normal">会員プログラム</span>
+                    <li class="nav-item <%= (displayId === 'MS-00') ? 'active': ''; %>">
+                        <a class="nav-link" href="/services/membershipService">
+                            <span class="sidebar-mini"><i class="material-icons">card_membership</i></span>
+                            <span class="sidebar-normal">会員サービス</span>
                         </a>
                     </li>
 
