--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -37,7 +37,7 @@ Aa-8
                                     </label>
                                     <select class="form-control" name="itemOffered[typeOf][$eq]">
                                         <option value="">---</option>
-                                        <option value="MembershipService">会員プログラム</option>
+                                        <option value="MembershipService">会員サービス</option>
                                         <option value="Product">アドオン</option>
                                     </select>
                                 </div>
