### Added - オファーカタログ管理を追加

--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -17,7 +17,7 @@ Aa-8
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/ticketTypeGroups/add">
+            <a class="btn btn-primary" href="/offerCatalogs/add">
                 <i class="material-icons">add</i>登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i>更新</a>
@@ -75,7 +75,7 @@ Aa-8
                                     <th>コード</th>
                                     <th>アイテム</th>
                                     <th>名称</th>
-                                    <th>券種</th>
+                                    <th>オファー</th>
                                     <th>サービス区分</th>
                                     <th>追加特性</th>
                                 </tr>
@@ -92,7 +92,7 @@ Aa-8
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
-                                            $offerCount$ 券種
+                                            $offerCount$ オファー
                                         </a>
                                     </td>
                                     <td name="itemOffered.serviceType.codeValue">
