--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -47,6 +47,7 @@ PR-00
                                 <tr>
                                     <th>ID</th>
                                     <th>名称</th>
+                                    <th>カタログ</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -59,6 +60,9 @@ PR-00
                                     </td>
                                     <td name="name.ja">
                                         $name.ja$
+                                    </td>
+                                    <td name="hasOfferCatalog.id">
+                                        $hasOfferCatalog.id$
                                     </td>
                                 </tr>
                             </tbody>
