--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -23,6 +23,22 @@
                 <% } %>
             </p>
         </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="hasOfferCatalog[id]" class="bmd-label-static">
+                オファーカタログ
+            </label>
+            <select class="form-control" name="hasOfferCatalog[id]">
+                <option value="">選択してください</option>
+                <% for (const offerCatalog of offerCatalogs) { %>
+                <option value="<%= offerCatalog.id %>"
+                    <% if (forms.hasOfferCatalog !== undefined && forms.hasOfferCatalog.id === offerCatalog.id) { %>
+                    selected<% } %>>
+                    <%= offerCatalog.name.ja %>
+                </option>
+                <% } %>
+            </select>
+        </div>
     </div>
 </div>
 <!-- end card -->
