--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -8,36 +8,36 @@
     <div class="card-body">
         <input type="hidden" name="id" value="<%= forms.id %>">
 
-        <div class="form-group bmd-form-group">
-            <label for="name[ja]" class="bmd-label-static">
-                名称<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=30
-                value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
-            <p class="message">
-                30文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors['name.ja']) { %>
-                <%- errors['name.ja'].msg %>
-                <% } %>
-            </p>
-        </div>
+        <div class="form-row">
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="name[ja]" class="bmd-label-static">
+                    名称<span class="text-danger">＊</span>
+                </label>
+                <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=30
+                    value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
+                <span class="bmd-help">30文字以内でご入力ください</span>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['name.ja']) { %>
+                    <%- errors['name.ja'].msg %>
+                    <% } %>
+                </span>
+            </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="hasOfferCatalog[id]" class="bmd-label-static">
-                オファーカタログ
-            </label>
-            <select class="form-control" name="hasOfferCatalog[id]">
-                <option value="">選択してください</option>
-                <% for (const offerCatalog of offerCatalogs) { %>
-                <option value="<%= offerCatalog.id %>"
-                    <% if (forms.hasOfferCatalog !== undefined && forms.hasOfferCatalog.id === offerCatalog.id) { %>
-                    selected<% } %>>
-                    <%= offerCatalog.name.ja %>
-                </option>
-                <% } %>
-            </select>
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="hasOfferCatalog[id]" class="bmd-label-static">
+                    オファーカタログ
+                </label>
+                <select class="form-control" name="hasOfferCatalog[id]">
+                    <option value="">選択してください</option>
+                    <% for (const offerCatalog of offerCatalogs) { %>
+                    <option value="<%= offerCatalog.id %>"
+                        <% if (forms.hasOfferCatalog !== undefined && forms.hasOfferCatalog.id === offerCatalog.id) { %>
+                        selected<% } %>>
+                        <%= offerCatalog.name.ja %>
+                    </option>
+                    <% } %>
+                </select>
+            </div>
         </div>
     </div>
 </div>
