--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -63,8 +63,9 @@ Aa-8
                                 <tr>
                                     <th>コード</th>
                                     <th>名称</th>
-                                    <th>券種</th>
-                                    <th>興行区分</th>
+                                    <th>オファー</th>
+                                    <th>アイテム</th>
+                                    <th>サービス区分</th>
                                     <th>追加特性</th>
                                     <th></th>
                                 </tr>
@@ -80,9 +81,10 @@ Aa-8
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
-                                            $offerCount$ 券種
+                                            $offerCount$ オファー
                                         </a>
                                     </td>
+                                    <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
                                     <td name="itemOffered.serviceType.codeValue">
                                         $itemOffered.serviceType.codeValue$</td>
                                     <td name="id__additionalProperty">
