--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -5,61 +5,67 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="form-group bmd-form-group">
-            <% if (isNew) { %>
-            <label for="identifier" class="bmd-label-static">
-                券種グループコード<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
-                value="<%= forms.identifier %>">
-            <span class="bmd-help">半角64文字以内でご入力ください</span>
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors.identifier) { %>
-                <%- errors.identifier.msg %>
+        <div class="form-row">
+            <div class="form-group bmd-form-group col-md-3">
+                <label for="identifier" class="bmd-label-static">
+                    コード<span class="text-danger">＊</span>
+                </label>
+                <% if (isNew) { %>
+                <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                    value="<%= forms.identifier %>">
+                <span class="bmd-help">半角64文字以内でご入力ください</span>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors.identifier) { %>
+                    <%- errors.identifier.msg %>
+                    <% } %>
+                </span>
+                <% } else { %>
+                <input type="text" class="form-control" disabled placeholder="" maxlength=64
+                    value="<%= forms.identifier %>">
+                <input type="hidden" name="id" value="<%= forms.id %>">
+                <input type="hidden" name="identifier" value="<%= forms.identifier %>">
                 <% } %>
-            </span>
-            <% } else { %>
-            <input type="hidden" name="id" value="<%= forms.id %>">
-            <input type="hidden" name="identifier" value="<%= forms.identifier %>">
-            <% } %>
+            </div>
         </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="name[ja]" class="bmd-label-static">
-                券種グループ名<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
-                value="<%= forms.name.ja %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors['name.ja']) { %>
-                <%- errors['name.ja'].msg %>
-                <% } %>
-            </span>
-        </div>
+        <div class="form-row">
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="name[ja]" class="bmd-label-static">
+                    名称<span class="text-danger">＊</span>
+                </label>
+                <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+                    value="<%= forms.name.ja %>">
+                <span class="bmd-help">全角64文字以内でご入力ください</span>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['name.ja']) { %>
+                    <%- errors['name.ja'].msg %>
+                    <% } %>
+                </span>
+            </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="name[en]" class="bmd-label-static">
-                券種グループ名英<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
-                value="<%= forms.name.en %>">
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors['name.en']) { %>
-                <%- errors['name.en'].msg %>
-                <% } %>
-            </span>
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="name[en]" class="bmd-label-static">
+                    名称英<span class="text-danger">＊</span>
+                </label>
+                <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+                    value="<%= forms.name.en %>">
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['name.en']) { %>
+                    <%- errors['name.en'].msg %>
+                    <% } %>
+                </span>
+            </div>
         </div>
 
         <div class="form-group bmd-form-group">
             <label for="ticketTypes" class="bmd-label-static">
-                対象券種名<span class="text-danger">＊</span>
+                オファーリスト<span class="text-danger">＊</span>
             </label>
         </div>
 
         <div class="form-group bmd-form-group">
             <span for="price" class="bmd-label-static">
-                券種売上金額
+                オファー売上金額
             </span>
             <div class="row">
                 <div class="col-md-6">
@@ -94,31 +100,33 @@
             </div>
         </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="description.ja" class="bmd-label-static">
-                補足説明
-            </label>
-            <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder=""
-                maxlength=64 value="<%= forms.description.ja %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors['description.ja']) { %>
-                <%- errors['description.ja'].msg %>
-                <% } %>
-            </span>
-        </div>
+        <div class="form-row">
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="description.ja" class="bmd-label-static">
+                    補足説明
+                </label>
+                <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder=""
+                    maxlength=64 value="<%= forms.description.ja %>">
+                <span class="bmd-help">全角64文字以内でご入力ください</span>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['description.ja']) { %>
+                    <%- errors['description.ja'].msg %>
+                    <% } %>
+                </span>
+            </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="description.en" class="bmd-label-static">
-                補足説明英
-            </label>
-            <input type="text" class="form-control" name="description[en]" id="description.en" placeholder=""
-                maxlength=64 value="<%= forms.description.en %>">
-            <span class="bmd-help text-danger d-block">
-                <% if (errors && errors['description.en']) { %>
-                <%- errors['description.en'].msg %>
-                <% } %>
-            </span>
+            <div class="form-group bmd-form-group col-md-6">
+                <label for="description.en" class="bmd-label-static">
+                    補足説明英
+                </label>
+                <input type="text" class="form-control" name="description[en]" id="description.en" placeholder=""
+                    maxlength=64 value="<%= forms.description.en %>">
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors['description.en']) { %>
+                    <%- errors['description.en'].msg %>
+                    <% } %>
+                </span>
+            </div>
         </div>
 
         <div class="form-group bmd-form-group">
