--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -30,6 +30,8 @@ Aa-8
                             <% /* 共通Hiddenコントロール */ %>
                             <%- include('../common/master/_hidden') %>
 
+                            <input type="hidden" name="itemOffered[typeOf][$eq]" value="EventService">
+
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label for="identifier" class="bmd-label-static">
