### Added - 区分にレーティングタイプを追加

--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -36,10 +36,13 @@ CC-00
                                     <select class="form-control" name="inCodeSet[identifier]">
                                         <option value="" selected>未選択</option>
                                         <option value="<%= CategorySetIdentifier.ServiceType%>">
-                                            興行区分
+                                            サービス区分
                                         </option>
                                         <option value="<%= CategorySetIdentifier.DistributorType%>">
                                             配給区分
+                                        </option>
+                                        <option value="<%= CategorySetIdentifier.ContentRatingType%>">
+                                            レーティング区分
                                         </option>
                                         <option value="<%= CategorySetIdentifier.OfferCategoryType%>">
                                             オファーカテゴリー
