--- a/views/creativeWorks/movie/edit.ejs
+++ b/views/creativeWorks/movie/edit.ejs
@@ -5,6 +5,7 @@ Aa-9
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
+<script src="/js/master/creativeWorks/movieForm.js"></script>
 
 <%- contentFor('body') %>
 
@@ -22,14 +23,3 @@ Aa-9
         </div>
     </form>
 </div>
-<script>
-    $(function () {
-        $('.btn-ok').on('click', function () {
-            $('form').submit();
-        });
-        // datepickerセット
-        $('.datepicker').datepicker({
-            language: 'ja'
-        })
-    });
-</script>
