--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -95,6 +95,7 @@ Aa-10
                                 <tr>
                                     <th>コード</th>
                                     <th>名称</th>
+                                    <th>サブタイトル</th>
                                     <th>上映時間</th>
                                     <th>レイティング</th>
                                     <th>公開日</th>
@@ -111,9 +112,8 @@ Aa-10
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="name|slice">
-                                        $name$
-                                    </td>
+                                    <td name="name|slice">$name$</td>
+                                    <td name="headline|slice">$headline$</td>
                                     <td name="durationAsMinutes">$durationAsMinutes$ min</td>
                                     <td name="contentRating">$contentRating$</td>
                                     <td name="dayPublished">$dayPublished$</td>
