--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -42,7 +42,7 @@ CC-00
                                             配給区分
                                         </option>
                                         <option value="<%= CategorySetIdentifier.ContentRatingType%>">
-                                            レーティング区分
+                                            レイティング区分
                                         </option>
                                         <option value="<%= CategorySetIdentifier.OfferCategoryType%>">
                                             オファーカテゴリー
