--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -93,7 +93,8 @@ Aa-3
                                     <th>劇場</th>
                                     <th>作品</th>
                                     <th class="text-left">名称</th>
-                                    <th>上映期間</th>
+                                    <th>開始</th>
+                                    <th>終了</th>
                                     <th>上映形態</th>
                                     <th>追加特性</th>
                                     <th></th>
@@ -120,7 +121,8 @@ Aa-3
                                     <td name="name.ja|slice">
                                         $name.ja$
                                     </td>
-                                    <td name="startDay__endDay">$startDay$ - $endDay$</td>
+                                    <td name="startDay">$startDay$</td>
+                                    <td name="endDay">$endDay$</td>
                                     <td name="videoFormat">
                                         $videoFormat$
                                     </td>
