--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -99,7 +99,7 @@ Aa-10
                                     <th>上映時間</th>
                                     <th>レイティング</th>
                                     <th>公開日</th>
-                                    <th>興行終了予定日</th>
+                                    <th>興行終了予定</th>
                                     <th>追加特性</th>
                                     <th></th>
                                 </tr>
@@ -112,12 +112,13 @@ Aa-10
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="name|slice">$name$</td>
-                                    <td name="headline|slice">$headline$</td>
-                                    <td name="durationAsMinutes">$durationAsMinutes$ min</td>
+                                    <td name="name|slice:20">$name$</td>
+                                    <td name="headline|slice:10">$headline$</td>
+                                    <td name="duration|duration:minute">$duration$</td>
                                     <td name="contentRating">$contentRating$</td>
-                                    <td name="dayPublished">$dayPublished$</td>
-                                    <td name="dayAvailabilityEnds">$dayAvailabilityEnds$</td>
+                                    <td name="datePublished|date:YYYY-MM-DD">$datePublished$</td>
+                                    <td name="offers.availabilityEnds|date:YY-MM-DD HH:mm:ss">$offers.availabilityEnds$
+                                    </td>
                                     <td name="identifier__addtionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
                                             data-identifier="$identifier$">
