--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -143,7 +143,8 @@ Aa-6
                                         $referenceQuantity.value$
                                     </td>
                                     <td name="eligibleConditions">$eligibleConditions$</td>
-                                    <td name="validFrom|parseDateTime__validThrough|parseDateTime__validRateLimitStr">
+                                    <td
+                                        name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
                                         $validFrom$ ~ $validThrough$<br>
                                         $validRateLimitStr$
                                     </td>
