--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -152,7 +152,8 @@ OF-01
                                     </td>
                                     <td name="priceSpecification.accounting.accountsReceivable">
                                         $priceSpecification.accounting.accountsReceivable$</td>
-                                    <td name="validFrom|parseDateTime__validThrough|parseDateTime__validRateLimitStr">
+                                    <td
+                                        name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
                                         $validFrom$ ~ $validThrough$<br>
                                         $validRateLimitStr$
                                     </td>
